# mlx-rs

./: .gitignore  AGENTS.md  Cargo.toml  PLAN.md  README.md  benchmark.md  collect_rust.sh  config.toml  mlx-rs.txt  moe_exact_design_rust.md  optimization_plan.md  py_save_llm_layers.py  py_vision_test.py  recommended_path.md  stop_llm.md
.github/workflows/: parity.yml
config/: model_matrix.env  model_matrix_extended.env
crates/mlx-core/: Cargo.toml
crates/mlx-lm/: Cargo.toml
crates/mlx-lm/src/: chat_template.rs  generate.rs  lib.rs  loader.rs  sampler.rs  server.rs  tokenizer.rs
crates/mlx-models/: Cargo.toml
crates/mlx-nn/: Cargo.toml
crates/mlx-vlm/: Cargo.toml
crates/mlx-vlm/src/: generate.rs  lib.rs  loader.rs  processing.rs
logs/: python_vs_rust_benchmark_20260306_093727.json  python_vs_rust_benchmark_20260306_105707.json  python_vs_rust_benchmark_20260306_111453.json  python_vs_rust_benchmark_20260306_112937.json  python_vs_rust_benchmark_20260306_114313.json  python_vs_rust_benchmark_20260306_115553.json  python_vs_rust_benchmark_20260306_120216.json  python_vs_rust_benchmark_20260306_122001.json  python_vs_rust_benchmark_20260306_122816.json  python_vs_rust_benchmark_20260306_123528.json  python_vs_rust_benchmark_20260306_124101.json  python_vs_rust_benchmark_20260306_124332.json  python_vs_rust_benchmark_20260306_125050.json  python_vs_rust_benchmark_20260306_125517.json  python_vs_rust_benchmark_20260306_130737.json  python_vs_rust_benchmark_20260306_131323.json  python_vs_rust_benchmark_20260306_132811.json  python_vs_rust_benchmark_20260306_134059.json  python_vs_rust_benchmark_20260306_134943.json
python_tests/: py_save_llm_layers.py  py_vision_test.py  save_python_vision.py  test_gemma4.py  test_gemma4_describe_image.py
scripts/: ask_what_is_rust.sh  benchmark_embeddings_concurrency.py  benchmark_python_vs_rust_servers.py  compare_generation_dumps.py  generate_python.py  prepare_lfm2_python_port_model.py  prepare_qwen_moe_python_port_model.py  qwen35_parity_dump.py  run_enclosed_benchmarks.sh  trace_generate_memory.sh
test_harness/: Cargo.toml  config.toml
test_harness/src/: main.rs
tests/: benchmark_case_embeddings.json  benchmark_cases.json  benchmark_models.json  benchmark_models_embeddings.json  benchmark_models_lfm2_python_port.json  benchmark_models_qwen_moe_python_port.json  embedding_server_real.rs
(+37 files in other folders)
