[package]
name = "mlx-test-harness"
version = "0.1.0"
edition = "2021"

resolver = "2"

[[bin]]
name = "test_harness"
path = "src/main.rs"

[workspace]

[dependencies]
mlx-lm = { path = "../crates/mlx-lm" }
mlx-vlm = { path = "../crates/mlx-vlm" }
mlx-models = { path = "../crates/mlx-models" }
mlx-core = { path = "../crates/mlx-core" }
mlx-nn = { path = "../crates/mlx-nn" }
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
dotenvy = "0.15"
