[package]
name = "mlx-lm"
version = "0.1.0"
edition = "2021"

[dependencies]
mlx-core = { path = "../mlx-core" }
mlx-nn = { path = "../mlx-nn" }
mlx-models = { path = "../mlx-models" }
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokenizers = { workspace = true }
minijinja = { workspace = true }
rand = "0.8"
